Refactor cricket game styles and add score display functionality; create JSON local storage and practice object examples

--- a/object/object.html
+++ b/object/object.html
@@ -40,10 +40,47 @@
 
                 //Autoboxing-----primitives are converted to objects to access methods
 
-            console.log('this is display price method'.length);
-            console.log('This is kgCoding'.toUpperCase());
-            console.log('this is kgCoding'.replace('kg','KnowledgeGate'));
 
+            // console.log('this is display price method'.length);
+            // console.log('This is kgCoding'.toUpperCase());
+            // console.log('this is kgCoding'.replace('kg','KnowledgeGate'));
+
+            //object refrences
+
+            // let a = 5;
+            // let b = a;
+            // console.log(`a=${a}, b=${b}`);
+            // a = 10;
+            // console.log(`a=${a}, b=${b}`);
+
+            // let x={num:7};
+            // let y=x;
+            // console.log(`a=${x.num}, y=${y.num}`);
+            // x.num=10;
+            // console.log(`a=${x.num}, y=${y.num}`);
+
+
+            // let p ={pop:'iujh'};
+            // let q={pop:'iujh'};
+            // console.log(p==q);
+
+            // object shortcuts
+            //De-structuing
+
+//             let laptop={
+//                 company : 'Dell',
+//                 model: 'Inspiron',
+//                 price: 55000,
+// 'item-name': 'mac-book',
+//             };
+//             let{company,model}=laptop;
+// console.log(company,model);
+
+//shortHand property names
+
+
+
+            
 
         // }
     // };
